# ZeELauncher

./: .gitignore  build-log.txt  launcher-update.json  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: routes.tsx
src/app/layout/: FriendsPanel.tsx  ShellLayout.tsx  SideNav.tsx  TopBar.tsx
src/components/: AuthGate.tsx  SmartCover.tsx
src/data/: mockGames.ts
src/hooks/: useManifest.ts
src/lib/: supabase.ts
src/pages/: GameDetails.tsx  Games.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  Support.tsx
src/services/: auth.ts  chat.ts  friends.ts  github.ts  launcherApi.ts  launcherUpdater.ts  notifications.ts  profile.ts  profileRemote.ts  storage.ts  support.ts  updater.ts
src/stores/: profileStore.ts  toastStore.ts
src/types/: installed.ts  manifest.ts  news.ts  patchnotes.ts  profile.ts
src/utils/: errorMessage.ts
~/.tauri/: zeelauncher.key  zeelauncher.key.pub
