[package]
name = "zeelauncher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "zeelauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
futures-util = "0.3"
zip = "6"
sha2 = "0.10"
url = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
